# zen-python

./: .gitignore  LICENSE  README.md  mkdocs.yml
.github/workflows/: pages.yml
config/: pyproject.toml
docs/: CHANGELOG.md  CONTRIBUTING.md
docs/en/: CHANGELOG.md  CONTRIBUTING.md  index.md
docs/en/otimizacao/: guia_completo.md  referencia_rapida.md
docs/en/zen/: pratica_parte1.md  pratica_parte2.md  teoria.md
docs/otimizacao/: guia_completo.md  referencia_rapida.md
docs/pt/: CHANGELOG.md  index.md
docs/pt/otimizacao/: referencia_rapida.md
docs/pt/zen/: pratica_parte1.md  pratica_parte2.md
docs/zen/: pratica_parte1.md  pratica_parte2.md  teoria.md
src/: demo_rapido.py  exemplos_otimizacao.py  setup_check.py  zen_python_exemplos.py
